--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,30 @@ jobs:
       - name: Build and test with Maven
         run: mvn clean verify
         working-directory: ./controller
+        
+build-and-push-docker-image:
+    needs: test-backend
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2.5.0
 
+      - name: Log in to Docker Hub
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      - name: Build image and push backend
+        uses: docker/build-push-action@v3
+        with:
+          context: ./controller
+          tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-simple-api:latest
+
+      - name: Build image and push database
+        uses: docker/build-push-action@v3
+        with:
+          context: ./postgres
+          tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-database:latest
+      - name: Build image and push httpd
+        uses: docker/build-push-action@v3
+        with:
+          context: ./html
+          tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-httpd:latest
