--- a/html/httpd.conf
+++ b/html/httpd.conf
@@ -551,8 +551,8 @@ SSLRandomSeed connect builtin
 
 <VirtualHost *:80>
 ProxyPreserveHost On
-ProxyPass / http://YOUR_BACKEND_LINK:8080/
-ProxyPassReverse / http://YOUR_BACKEND_LINK:8080/
+ProxyPass / http://my_spring_boot_app:8080/
+ProxyPassReverse / http://my_spring_boot_app:8080/
 </VirtualHost>
 LoadModule proxy_module modules/mod_proxy.so
 LoadModule proxy_http_module modules/mod_proxy_http.so
