--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,6 @@ on:
       - main
       - develop
   pull_request:
-    branches:
-      - main
-      - develop
 
 jobs:
   test-backend: 
@@ -34,7 +31,7 @@ jobs:
         uses: actions/checkout@v2.5.0
 
       - name: Log in to Docker Hub
-        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_TOKEN }}
+        run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_TOKEN }}
 
       - name: Build image and push backend
         uses: docker/build-push-action@v3
