--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           java-version: '17'
 
       - name: Build and test with Maven
-        run: mvn clean verify
+        run: mvn clean -B verify sonar:sonar -Dsonar.projectKey=tp-devops-niziyang_tp1 -Dsonar.organization=tp-devops-niziyang -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  --file ./simple-api/pom.xml
         working-directory: ./controller
 
         
@@ -53,3 +53,4 @@ jobs:
           context: ./html
           tags: ${{ secrets.DOCKER_USERNAME }}/tp-devops-httpd:latest
           push: ${{ github.ref == 'refs/heads/main' }}
+        
