--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
           java-version: '17'
 
       - name: Build and test with Maven
-        run: mvn clean -B verify sonar:sonar -Dsonar.projectKey=tp-devops-niziyang_tp1 -Dsonar.organization=tp-devops-niziyang -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  --file ./controller/pom.xml
+        run: mvn clean -B verify sonar:sonar -Dsonar.projectKey=tp-devops-niziyang_tp1 -Dsonar.organization=tp-devops-niziyang -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=${{ secrets.SONAR_TOKEN }}  
         working-directory: ./controller
 
         
